# soundlines

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  _cargo.toml  cells.json  external.json  last_gps_readings_by_user.sql  soundlines.dev.terminix.json
documents/: a.js  endpoints.md  notes.md  possible_responses.js
migrations/2017-10-10-091035_refactor_to_json/: up.sql
migrations/20170804095447_add_wifi_readings/: down.sql  up.sql
migrations/20170805082553_add_sound_readings/: down.sql  up.sql
migrations/20170805085148_add_light_readings/: down.sql  up.sql
migrations/20170805090049_add_gps_readings/: down.sql  up.sql
migrations/20170808085109_add_reading_tables/: down.sql  up.sql
migrations/20170810111508_add_parameters/: down.sql
migrations/20170813030534_add_entities/: up.sql
migrations/20170817092035_add_prefab_to_entities/: down.sql  up.sql
migrations/20170819145306_add_cell_id_to_entities/: down.sql
migrations/20170824170736_add_dna_setting_entity_props/: down.sql  up.sql
migrations/20170827055415_add_seeds/: down.sql  up.sql
migrations/20170827070117_update_cell_data/: down.sql
migrations/20170827071511_add_age_and_size_to_entities/: up.sql
migrations/20170828184630_add_users/: up.sql
migrations/20170830101326_update_durations_to_age/: up.sql
migrations/20170831121959_add_point_to_readings/: down.sql
migrations/20170901065742_add_prefab_to_seeds/: down.sql  up.sql
migrations/20170904112610_add_aggregations_to_cells/: down.sql  up.sql
migrations/20170925060033_add_weather_status/: down.sql
rocket_jwt/: Cargo.toml
rocket_jwt/examples/: simple.rs
rocket_jwt/src/: lib.rs
simulation_async/: Cargo.toml
simulation_async/src/: main.rs  models.rs  timer.rs
soundlines_core/: .env  Cargo.toml  logs  logs.txt  show_entitiets.sh  show_seeds.sh
soundlines_core/jni/: SoundlinesCore.h  SoundlinesCore.java  org_soundlines_visualization_SoundlinesCore.h
soundlines_core/migrations/2017-10-10-091035_refactor_to_json/: up.sql
soundlines_core/migrations/20170808085109_add_reading_tables/: up.sql
soundlines_core/migrations/20170810111508_add_parameters/: up.sql
soundlines_core/migrations/20170812050854_add_cells/: down.sql  up.sql
soundlines_core/migrations/20170819145306_add_cell_id_to_entities/: up.sql
soundlines_core/migrations/20170824170736_add_dna_setting_entity_props/: down.sql
soundlines_core/migrations/20170827055415_add_seeds/: up.sql
soundlines_core/migrations/20170827070117_update_cell_data/: up.sql
soundlines_core/migrations/20170827071511_add_age_and_size_to_entities/: down.sql
soundlines_core/migrations/20170827073226_add_setting_id_to_dnas/: down.sql  up.sql
soundlines_core/migrations/20170827162605_add_prefab_to_settings/: down.sql  up.sql
soundlines_core/migrations/20170829185041_fix_dna_healthy_rate_column/: down.sql  up.sql
soundlines_core/migrations/20170830101326_update_durations_to_age/: down.sql
soundlines_core/migrations/20170831121959_add_point_to_readings/: up.sql
soundlines_core/migrations/20170903115755_add_location_to_data_readings/: down.sql  up.sql
soundlines_core/migrations/20170925060033_add_weather_status/: up.sql
soundlines_core/sqls/: setup_tables.sql
soundlines_core/src/: errors.rs  exports.rs  helpers.rs  lib.rs  macros.rs  map.rs  models.rs
soundlines_core/src/bins/: simulation.rs  soundlines_cli.rs  visualization.rs
soundlines_core/src/db/: cells.rs  entities.rs  extensions.rs  geometry.rs  mod.rs  neighbors.rs  plant_setting.rs  seeds.rs  weather.rs
soundlines_core/src/db/models/: cells.rs  dnas.rs  entities.rs  gps_readings.rs  light_readings.rs  mod.rs  parameters.rs  plant_settings.rs  seeds.rs  sound_readings.rs  users.rs  weather.rs  wifi_readings.rs
soundlines_core/src/generators/: cells.rs  dnas.rs  mod.rs  seeds.rs
soundlines_core/src/geom/: cell.rs
soundlines_core/src/simulation/: dna.rs  entity.rs  mod.rs  neighbors.rs  seed.rs  sync.rs
soundlines_core/src/visualization/: entity.rs  mod.rs  seed.rs
soundlines_core/visualization/: build.gradle
soundlines_core/visualization/core/: build.gradle
soundlines_core/visualization/core/src/org/soundlines/visualization/: ISoundlinesMessage.java  MessageType.java  SoundlinesCore.java  SoundlinesThread.java  SoundlinesVisualization.java
soundlines_core/visualization/core/src/org/soundlines/visualization/messages/: FetchCells.java  FetchEntitiesMessage.java  ReceiveCells.java  ReceiveEntitiesMessage.java  StopMessage.java
soundlines_core/visualization/core/src/org/soundlines/visualization/models/: Cell.java  Entity.java  Seed.java
soundlines_core/visualization/desktop/: build.gradle
soundlines_core/visualization/desktop/src/org/soundlines/visualization/desktop/: DesktopLauncher.java
soundlines_core/visualization/gradle/wrapper/: gradle-wrapper.properties
soundlines_external/: Cargo.toml  external.json
soundlines_external/libs/forecast_io/: CHANGELOG.md  Cargo.toml  README.md
soundlines_external/libs/forecast_io/src/: error.rs  lib.rs  models.rs  utils.rs
soundlines_external/src/: config.rs  errors.rs  main.rs  twitter.rs  weather.rs
soundlines_server/: Cargo.toml  Rocket.toml
soundlines_server/src/: db_guard.rs  main.rs  server.rs  user.rs
soundlines_server/src/endpoints/: cells.rs  collectors.rs  dev.rs  entities.rs  mod.rs  parameters.rs  seeds.rs  state.rs  users.rs  weather.rs
soundlines_settings/: Cargo.toml
soundlines_sim/: Cargo.toml
soundlines_sim/libs/gfx/: Cargo.toml
soundlines_sim/libs/glutin/: Cargo.toml
soundlines_sim/libs/three-rs/: Cargo.toml
soundlines_sim/src/: constants.rs  context.rs  gencells.rs  genworld.rs  helpers.rs  lib.rs  main.rs  randomizer.rs  sim_dna.rs  sim_entity.rs  sim_geo.rs  sim_seed.rs  simulation.rs  snapshot.rs
soundlines_vis/: Cargo.toml
soundlines_vis/src/: cell.rs  constants.rs  dna.rs  helpers.rs  main.rs  plant.rs  plant_setting.rs  seed.rs  world.rs
sqls/: initialize_data.sql  refactoring.sql  update_entity_cell_ids.sql
src/: collectors.rs  main.rs  map.rs  rocket_extensions.rs  server.rs
src/db/: guard.rs  (+4 more)
(+16 files in other folders)
