[package]
name = "soundlines_core"
version = "0.1.0"
authors = ["Umur Gedik <umurgdk@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
error-chain = "0.11.0"
postgres = { version = "0.15.1", features = ["with-serde_json"] }
#lazy_static = "0.2"
chrono = { version = "0.4.0", features = ["serde"] }
dotenv = "0.10.1"
log = "0.3.8"
env_logger = "0.4.3"
geo = "0.4.12"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
geojson = "0.9.0"
rayon = "0.8.2"
fallible-iterator = "0.1.3"
crossbeam = "0.3.0"
rand = "0.3"
cgmath = "0.15.0"

# Visualization
jni = "0.6"