[package]
name = "soundlines_sim"
version = "0.1.0"
authors = ["Umur Gedik <umurgdk@gmail.com>"]

[dependencies]
soundlines_core = { path = "../soundlines_core" }
geo = "*"
rand = "*"
noise = "*"
cgmath = "0.15.0"
chrono = "*"
chrono-tz = "*"
rayon = "0.8"
clap = "*"
serde = "*"
serde_json = "*"

cron = "*"
job_scheduler = "*"
