[package]
name = "three"
version = "0.2.0"
authors = ["Dzmitry Malyshau <kvarkus@gmail.com>"]
license = "Apache-2.0"
description = "Three.js inspired 3D engine in Rust"
categories = ["graphics", "game-engines"]
keywords = ["gamedev", "graphics", "engine", "3D"]
homepage = "https://github.com/kvark/three-rs"
repository = "https://github.com/kvark/three-rs"
documentation = "https://docs.rs/three/"
exclude = ["doc", "bors.toml", ".travis.yml", "test_data"]


[lib]

[features]
default = ["opengl"]
"opengl" = ["gfx_device_gl", "gfx_window_glutin", "glutin"]

[dependencies]
cgmath = "0.14"
froggy = "0.3"
genmesh = "0.5"
gfx = { path = "../gfx/src/render" }
gltf = "0.7"
image = "0.13"
log = "0.3"
obj = { version = "0.6", features = ["genmesh"] }
mint = "0.4.2"
winit = { path = "../winit" }
# OpenGL
gfx_device_gl = { path = "../gfx/src/backend/gl", optional = true }
gfx_window_glutin = { path = "../gfx/src/window/glutin", optional = true }
glutin = { path = "../glutin", optional = true }

[dev-dependencies]
env_logger = "0.4"
rand = "0.3"


[[example]]
name = "lights"

[[example]]
name = "materials"

[[example]]
name = "obj"

[[example]]
name = "shapes"

[[example]]
name = "sprite"

[[example]]
name = "group"

[[example]]
name = "anim"

[[example]]
name = "aviator"
path = "examples/aviator/main.rs"
